# carpet-rules-database

./: .eslintrc.json  .gitignore  CNAME  LICENCE  README.md  index.html  package.json  prettier.config.js  pyproject.toml  requirements.txt  setup-and-run-main.py  tailwind.config.js  tsconfig.json
.github/workflows/: pages.yml  update_rules.yml
backend/: go.mod  main.go
backend/reader/: rules.go  types.go
backend/readers/: lexer.go  parser.go  types.go  util.go
css/: input.css  output.css
data/: parsed_data.json  repos.json  repos.toml
frontend/: bun.lockb  index.html  package.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/server/: index.js  manifest-full.js  manifest.js
frontend/css/: input.css  output.css
frontend/script/: index.js
frontend/src/: app.css  app.d.ts  app.html
frontend/src/lib/: app-state.svelte.ts  types.ts
frontend/src/lib/assets/: .gitignore  rules.json  sha.json
frontend/src/routes/: +layout.svelte  +page.svelte
generator/: .gitignore  build.gradle.kts  downloader.py  linker.py  main.py  parser.py  regex.py  remote_host_template.py  rule.py  settings.gradle.kts  source_type.py  tokenizer.py  types.py  util.py
generator/parsers/: abstract_parser.py  legacy_parser.py  parser_type.py  regex.py  tokenizer.py  v1_parser.py  v2_parser.py  v2_yaml_parser.py  vt_parser.py
generator/preprocessor/: downloader.py
generator/tokenizer/: rule.py  tokenizer.py
script/: CollapseRules.js  ReadAndDisplayRules.js  RuleHTMLBuilderHelper.js
src/: index.html
src/script/: index.ts
templates/: repo.template
(+61 files in other folders)
