[tool.poetry]
name = "carpet-rules-database"
version = "0.1.0"
description = "Website to track all carpet rules"
authors = ["Crec0"]
license = "MIT"
readme = "README.md"
packages = [{include = "generator"}]

[tool.poetry.scripts]
generator = "generator.main:main"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
pyjson5 = "^1.6.2"
PyYAML = "^6.0"
pyserde = "^0.10.2"
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
